--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= link_to "Home", root_path %>
+<%= link_to "New Post", new_post_path %>
 
 <%= yield %>
 
