--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,3 +3,5 @@
 <div><%= @post.body %></div>
 
 <%= link_to "Edit Post", edit_post_path(@post) %>
+
+<%= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete your Post? This post will be lost and gone forever."} %>
